* The property ->domiciliation and ->propio on bank accounts has been deprecated and replaced with property ->address and ->owner_name everywhere.
* If you were using the substitution key __MEMBER_CIVILITY__, you must now use __MEMBER_TITLE__


***** ChangeLog for 20.0.4 compared to 20.0.3 *****
FIX: $this->origin_object can not be instance of CommandeFournisseur if it is already an instanceof CommonObject
FIX: 17.0 API endpoints "PUT": prevent overwriting all extrafields if only some are supplied in the request cf. PR #29237
FIX: 17.0 - collisions in cache for dol_getIdFromCode
FIX: #18713
FIX: 20.0 - PHP8 fatal when creating a reception unless corresponding PDF model is enabled
FIX: #21294 Stock import sql query
FIX: #26250 fatal error on kit
FIX: #28702
FIX: #29624 - substitution of __DATE_DELIVERY__
FIX: #32113
FIX: #32186
FIX: #32339 Delete a loan settlement is partial
FIX: #32387
FIX: #32477 Loan - Insurance amount need decimals
FIX: #32611
FIX: #32736 + avoid php warning
FIX: #32743
FIX: #32765 JS Error: Uncaught TypeError
FIX: #32801 VAT type is inverted in form VAT selector
FIX: #32840
FIX: #32843
FIX: #32880 - Tags are using a special rendering.
FIX: add other fields
FIX: autofill price with multicurrency on supplier doc
FIX: avoid phan error
FIX: avoid php8 warnings
FIX: avoid warning with the new Dolistore website
FIX: backport from develop to avoid php warning
FIX: Bad calculation of the theoretical stock. Did not take into account
FIX: bad dispatched quantities for batches on shipment card
FIX: Brian is in the kitchen
FIX: broken feature, compatibility with "Default search filters"
FIX: broken feature with check $pa_ht_isemptystring
FIX: Bug on select user on time.php (all project list)
FIX: can not delete files in task card
FIX: Check "$search_sale" only if it's an internal user
FIX: clean unique extrafields when create product combination
FIX: code not visible correctly into view of dictionary